# wfnexus

./: .gitignore  ANCHORED_SUMMARY.md  ARCHITECTURE.md  Makefile  PROJECT_SUMMARY.txt  README.md  dialogue.txt  docker-compose.yml  package-lock.json  package.json  skills-lock.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/auth/: api.py  schemas.py
backend/app/core/: config.py  database.py  fuzzy.py  logging_.py  notifications.py  scheduler.py  security.py
backend/app/inventory/: api.py  models.py  schemas.py
backend/app/market/: api.py  client.py  collector.py  models.py  oracle.py  schemas.py
backend/app/riven/: api.py  models.py  schemas.py
backend/app/settings/: api.py  models.py  schemas.py
backend/app/trading/: api.py  models.py  schemas.py
backend/app/worldstate/: api.py  schemas.py
backend/data/: warframe_nexus.db-shm  warframe_nexus.db-wal
backend/scripts/: import_quantframe.py  start.sh  start_dev.bat
backend/tests/: conftest.py  test_api.py  test_oracle.py  test_rate_limiter.py  test_trading.py
docs/: ADDING_A_MODULE.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
papka/: 1234.txt  12345.txt  123456.txt
papka/aaa/: auth.json  cache_version.json  check_tags.py  dump_data.py  dump_schema.py  quantframeV2.sqlite_backup  (+1 more)
(+258 files in other folders)
