[package]
name = "warframe-nexus"
version = "0.1.0"
description = "Warframe Nexus — Desktop assistant for Warframe market analysis and trading"
authors = ["Warframe Nexus Team"]
edition = "2021"

[lib]
name = "warframe_nexus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
